Fixes responsive spacing issue with CTA button in nav

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -47,6 +47,9 @@
     &.logged-out .toggle-topbar.menu-icon {
       margin-top: -46px;
     }
+    ul.left > li.cta .button {
+      margin-left: 0;
+    }
   }
 }
 
